--- a/templates/add_activity/addActivity.html.twig
+++ b/templates/add_activity/addActivity.html.twig
@@ -9,7 +9,7 @@
     <div class="container-fluid">
         {# Titre h1 #}
         <div class="row">
-            <h1 class="col-12 text-center my-5">Ajouter une activité : tout les champs doivent être remplis</h1>
+            <h1 class="col-12 text-center my-5">Ajouter une activité : tous les champs doivent être remplis</h1>
         </div>
         <div class="row">
             <div class="col-12 col-md-4 offset-md-4">
@@ -58,11 +58,8 @@
                     {# Bouton de validation #}
                     {{ form_row(formActivity.save) }}
 
-
-
                 {# Fermeture du formulaire #}
                 {{ form_end(formActivity) }}
-
 
             </div>
         </div>
