--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -14,13 +14,13 @@
                 <form class="form-inline my-2 my-lg-0" method="GET" action="{{ path('activity_search') }}">
                     <fieldset><!--Regroupe un ensemble de champs avec légende-->
                         <select class="form-control " type="search" name="q">
-                            <option selected>choissisait une activité rapidement</option>
-                            <option value="hotel">Hotel</option>
+                            <option selected>Choisissez une activité rapidement</option>
+                            <option value="hotel">Hôtel</option>
                             <option value="restaurant">Restaurant</option>
                             <option value="autre">Autre</option>
                         </select>
                     </fieldset>
-                    <button type="submit" class=" offset-4 btn btn-dark">Validé</button
+                    <button type="submit" class=" offset-4 btn btn-dark">Valider</button
                 </form>
             </div>
         </div>
